projects/amiya.akn/src/infrastructure/kubernetes/traefik/default.gateway.yaml
# The NX project requires a dedicated listener for the *.amiya.akn.chezmoi.sh domain
# to handle HTTPS traffic for NX-specific services.
# This configuration extends the default Gateway with an additional listener
# and updates the certificate to include the NX domain.
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
spec:
  listeners:
    - name: web
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: chezmoi.sh-websecure
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard.chezmoi.sh-certificate
    - name: amiya.akn.chezmoi.sh-websecure
      port: 443
      protocol: HTTPS
      hostname: "*.amiya.akn.chezmoi.sh"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard.chezmoi.sh-certificate
